@@ -1,6 +1,7 @@
 ifupdown (0.8.13) UNRELEASED; urgency=medium
 
   * Fix test suite on kFreeBSD. Closes: #826062
+  * Check the return value of chdir() and ftruncate().
 
  -- Guus Sliepen <guus@debian.org>  Sat, 04 Jun 2016 13:34:07 +0200
 
